--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Bulb Ex</title>
 </head>
-<body>
-    <img id="bulb" src="./assets/img/white_lamp.png" alt="">
-    <button id="btn">Accendi</button>
+<body id="body" class="off">
+    <div class="container">
+        <img id="bulb" src="./assets/img/white_lamp.png" alt="">
+        <p id="paragh" class="off">Non si vede nulla!</p>
+        <div class="button">
+            <button id="btn">Accendi</button>
+        </div>
+
+    </div>
     
     
     <script src="./assets/javascript/main.js"></script>
